mbtiles/tests/snapshots/copy__databases@norm__empty-no-hash.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"hash_algorithm\", \"md5\"  )"
- type: table
  tbl_name: tiles_data
  sql: "CREATE TABLE tiles_data (\n    tile_data_id INTEGER PRIMARY KEY,\n    tile_data BLOB\n)"
  values: []
- type: table
  tbl_name: tiles_shallow
  sql: "CREATE TABLE tiles_shallow (\n    zoom_level INTEGER,\n    tile_column INTEGER,\n    tile_row INTEGER,\n    tile_data_id INTEGER,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n) WITHOUT ROWID"
  values: []
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    tiles_shallow.zoom_level,\n    tiles_shallow.tile_column,\n    tiles_shallow.tile_row,\n    tiles_data.tile_data\nFROM tiles_shallow\nINNER JOIN tiles_data ON tiles_shallow.tile_data_id = tiles_data.tile_data_id"
  values: ~
